database updated, homepage configured, bootstraps

--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -2,11 +2,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{% block title %}My Site{% endblock %}</title>
+    <title>{% block title %}Employee Management{% endblock %}</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
     <header>
-        <h1>My Site</h1>
+        <h1>Employee Management</h1>
     </header>
     <nav>
         <ul>
@@ -21,3 +22,4 @@
     </div>
 </body>
 </html>
+
