--- a/templates/employees/employee_list.html
+++ b/templates/employees/employee_list.html
@@ -1,26 +1,32 @@
 {% extends 'base_generic.html' %}
 
 {% block content %}
-  <h2>Employee List</h2>
-  <table>
-    <tr>
-      <th>Name</th>
-      <th>Department</th>
-      <th>Job Title</th>
-      <th>Actions</th>
-    </tr>
-    {% for employee in employees %}
-      <tr>
-        <td>{{ employee.user.get_full_name }}</td>
-        <td>{{ employee.department.name }}</td>
-        <td>{{ employee.job_title }}</td>
-        <td>
-          <a href="{% url 'employee_detail' employee.pk %}">View</a>
-          <a href="{% url 'employee_edit' employee.pk %}">Edit</a>
-          <a href="{% url 'employee_delete' employee.pk %}">Delete</a>
-        </td>
-      </tr>
-    {% endfor %}
-  </table>
-  <a href="{% url 'employee_add' %}">Add Employee</a>
+  <div class="mt-4">
+    <h2 class="mb-4">Employee List</h2>
+    <table class="table table-striped table-bordered">
+      <thead class="thead-dark">
+        <tr>
+          <th>Name</th>
+          <th>Department</th>
+          <th>Job Title</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for employee in employees %}
+          <tr>
+            <td>{{ employee.user.first_name }}</td>
+            <td>{{ employee.department.name }}</td>
+            <td>{{ employee.job_title }}</td>
+            <td>
+              <a class="btn btn-primary btn-sm" href="{% url 'employee_detail' employee.pk %}">View</a>
+              <a class="btn btn-warning btn-sm" href="{% url 'employee_edit' employee.pk %}">Edit</a>
+              <a class="btn btn-danger btn-sm" href="{% url 'employee_delete' employee.pk %}">Delete</a>
+            </td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+    <a class="btn btn-success mt-3" href="{% url 'employee_add' %}">Add Employee</a>
+  </div>
 {% endblock %}
