--- a/templates/employees/employee_confirm_delete.html
+++ b/templates/employees/employee_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends 'base_generic.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
   <h2>Are you sure you want to delete {{ employee.user.get_full_name }}?</h2>
