--- a/templates/home/homepage.html
+++ b/templates/home/homepage.html
@@ -1,29 +1,61 @@
-<!-- templates/base_generic.html -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}HRM System{% endblock %}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        body {
+            padding-top: 4.5rem;
+        }
+        header {
+            margin-bottom: 2rem;
+        }
+        nav ul {
+            list-style: none;
+            padding: 0;
+        }
+        nav ul li {
+            display: inline;
+            margin-right: 1rem;
+        }
+        .coming-soon {
+            color: red;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <center><h1>Human Resource Management</h1>
-            <br>
-        <h2>Home Page</h2>
-        <br>
-        <h3 style= "color: Red";>Coming Soon!</h3></center>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="{% url 'employees' %}">Employees</a></li>
-            <!-- Add more navigation links here -->
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">HRM System</a>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'employees' %}">Employees</a>
+                        <li><a href="{% url 'attendance_record_list' %}">Attendance</a></li>
+
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
-    <div>
+    
+    <header class="text-center">
+        <div class="container">
+            <h1 class="display-4">Human Resource Management</h1>
+            <br><br><br>
+            <h1 class="coming-soon">Coming Soon!</h1>
+        </div>
+    </header>
+    
+    <main role="main" class="container">
         {% block content %}
-        <!-- Default content -->
         {% endblock %}
-    </div>
+    </main>
+    
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
-
