--- a/templates/home/homepage.html
+++ b/templates/home/homepage.html
@@ -32,8 +32,8 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'employees' %}">Employees</a>
-                        <li><a href="{% url 'attendance_record_list' %}">Attendance</a></li>
+                        <a class="nav-link" href="{% url "employees" %}">Employees</a>
+                        <li><a href="{% url "attendance_record_list" %}">Attendance</a></li>
 
                     </li>
                 </ul>
