url_path issue resolved

--- a/templates/attendance/attendance_record_form.html
+++ b/templates/attendance/attendance_record_form.html
@@ -1,4 +1,4 @@
-{% extends 'base_generic.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
   <h2>{% if form.instance.pk %}Edit{% else %}Add{% endif %} Attendance Record</h2>
