search feature for attendance records list filtering

--- a/templates/attendance/attendance_record_list.html
+++ b/templates/attendance/attendance_record_list.html
@@ -19,7 +19,7 @@
     </tr>
     {% for record in records %}
     <tr>
-      <td>{{ record.employee.username }}</td>
+      <td>{{ record.employee.first_name }}</td>
       <td>{{ record.date }}</td>
       <td>{{ record.check_in_time }}</td>
       <td>{{ record.check_out_time }}</td>
