leave_request model, view, forms, and templates added

--- a/templates/home/homepage.html
+++ b/templates/home/homepage.html
@@ -34,6 +34,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url "employees" %}">Employees</a>
                         <li><a href="{% url "attendance_record_list" %}">Attendance</a></li>
+                        <a href="{% url 'leave_request_create' %}">Submit Leave Request</a>
+                        <a href="{% url 'leave_request_list' %}">View Leave Requests</a>
+
 
                     </li>
                 </ul>
