--- a/templates/home/homepage.html
+++ b/templates/home/homepage.html
@@ -58,6 +58,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'leave_request_list' %}">View Pending Leave Requests</a>
+              <a href="{% url 'notification_list' %}">Notifications</a>
             </li>
           </ul>
         </div>
