--- a/templates/home/homepage.html
+++ b/templates/home/homepage.html
@@ -33,10 +33,10 @@
     <li class="nav-item">
       {% if user.is_authenticated %}
         <p>Welcome, {{ user.firstname }}!</p>
-        <a href="{% url 'account_logout' %}">Logout</a>
+        <a href="{% url "account_logout" %}">Logout</a>
       {% else %}
-        <a href="{% url 'account_login' %}">Login</a>
-        <a href="{% url 'account_signup' %}">Sign Up</a>
+        <a href="{% url "account_login" %}">Login</a>
+        <a href="{% url "account_signup" %}">Sign Up</a>
       {% endif %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
@@ -46,19 +46,22 @@
             
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'employees' %}">Employees</a>
+              <a class="nav-link" href="{% url "employees" %}">Employees</a>
+            </li>
+            <li >
+            <a class= "nav-link" href="{% url "profile" %}">Profile</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'attendance_record_list' %}">Attendance</a>
-              <a href="{% url 'leave_history' %}">Leave History</a>
+              <a class="nav-link" href="{% url "attendance_record_list" %}">Attendance</a>
+              <a class= "nav-link" href="{% url "leave_history" %}">Leave History</a>
 
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'leave_request_create' %}">Submit Leave Request</a>
+              <a class="nav-link" href="{% url "leave_request_create" %}">Submit Leave Request</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'leave_request_list' %}">View Pending Leave Requests</a>
-              <a href="{% url 'notification_list' %}">Notifications</a>
+              <a class="nav-link" href="{% url "leave_request_list" %}">View Pending Leave Requests</a>
+              <a class= "nav-link" href="{% url "notification_list" %}">Notifications</a>
             </li>
           </ul>
         </div>
