Benefit Manegement update

--- a/templates/benefit/benefit.html
+++ b/templates/benefit/benefit.html
@@ -11,13 +11,13 @@
 <main>
   <div class="card">
     <h2>Welcome to Benefit Management</h2>
-    <p>Manage your company's employee benefit programs with ease.</p>
+    <p>View and manage benefit plans that are available.</p>
     <button><a href="plans/{{user.email}}">Explore Benefits</a></button>
   </div>
 
   <div class="card">
     <h2>My Enrollment</h2>
-    <p>The annual open enrollment period is coming soon. Review your benefit options and get ready to enroll.</p>
+    <p>View enrollement activities.</p>
     <a href="myenrol/{{user.email}}">Learn More</a>
   </div>
 </main>
