--- a/templates/home/homepage.html
+++ b/templates/home/homepage.html
@@ -51,6 +51,12 @@
             <li >
             <a class= "nav-link" href="{% url "profile" %}">Profile</a>
             </li>
+            <li >
+              <a class= "nav-link" href="benefit/benefit">Employee self service Benefit</a>
+              </li>
+            <li >
+              <a class= "nav-link" href="{% url "benefit" %}">benefit</a>
+              </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url "attendance_record_list" %}">Attendance</a>
               <a class= "nav-link" href="{% url "leave_history" %}">Leave History</a>
